--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 
         <div class="choices">
 
-            <div class="choice rock">
+            <div class="choice rock" data-choice="rock">
                 <img src="./img/pierre.png" alt="pierre">
             </div>
 
-            <div class="choice paper">
+            <div class="choice paper" data-choice="paper">
                 <img src="./img/feuille.png" alt="feuille">
             </div>
 
-            <div class="choice scissors">
+            <div class="choice scissors" data-choice="scissors">
                 <img src="./img/ciseaux.png" alt="ciseaux">
             </div>
         
